// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Recipe Controller - Update should throw validation error when property description is 1 1`] = `
Object {
  "error": "Bad Request",
  "message": Array [
    "description must be a string",
  ],
  "statusCode": 400,
}
`;

exports[`Recipe Controller - Update should throw validation error when property fileId is test 1`] = `
Object {
  "error": "Bad Request",
  "message": Array [
    "fileId must be a number conforming to the specified constraints",
  ],
  "statusCode": 400,
}
`;

exports[`Recipe Controller - Update should throw validation error when property ingredients is 1 1`] = `
Object {
  "error": "Bad Request",
  "message": Array [
    "nested property ingredients must be either object or array",
  ],
  "statusCode": 400,
}
`;

exports[`Recipe Controller - Update should throw validation error when property name is 1 1`] = `
Object {
  "error": "Bad Request",
  "message": Array [
    "name must be a string",
  ],
  "statusCode": 400,
}
`;

exports[`Recipe Controller - Update should throw validation error when property preparing is 1 1`] = `
Object {
  "error": "Bad Request",
  "message": Array [
    "nested property preparing must be either object or array",
  ],
  "statusCode": 400,
}
`;
